package ucf.assignments;

/*
 *  UCF COP3330 Summer 2021 Assignment 5 Solution
 *  Copyright 2021 Matthew Neet
 */

public class NameHelpController {
    //Nothing happens here, I just needed to make a controller for the fxml file
}
